modified ui and about page

--- a/pages/css/nav.module.css
+++ b/pages/css/nav.module.css
@@ -5,25 +5,31 @@
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   position: fixed;
   right: 5px;
-  top: 25%;
   z-index: 2;
   display: flex;
   flex-direction: column;
   margin: auto;
+  height: 100%
 }
 
 .navbar:hover {
   box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.25);
 }
 
+.navbar>* {
+  margin: auto;
+}
+
 .navtoggle {
   position: fixed;
   right: 0;
   bottom: 0;
+  z-index: 8;
 }
 
 .navprop {
   display: block;
+  margin: auto;
 }
 
 .navprop:hover {
@@ -37,7 +43,7 @@
 .pic {
   width: 48px;
   height: 48px;
-  margin-right: 10px;
+  margin: auto;
 }
 
 .description {
@@ -53,4 +59,33 @@
 
 .search {
   cursor: pointer;
+}
+
+
+@media screen and (max-width: 1024px) {
+  .navbar {
+    background-color: white;
+    border: none;
+    border-radius: 12px;
+    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+    position: fixed;
+    top: auto;
+    bottom: 5px;
+    z-index: 2;
+    display: flex;
+    margin: 0;
+    flex-direction: row;
+    height: max-content;
+    width: 100%;
+    left: 5px;
+
+  }
+
+  .navtoggle {
+    position: fixed;
+    right: 0;
+    bottom: auto;
+    top: 0;
+    opacity: 0.5;
+  }
 }
